onBoarding layout issue fixed

--- a/styles/components/_login.scss
+++ b/styles/components/_login.scss
@@ -63,6 +63,7 @@
             position: absolute;
             top: 4rem;
             left: 4rem;
+            z-index: 1;
         }
     }
 
@@ -161,6 +162,7 @@
 }
 
 .form-content {
+    margin: 2rem 0 0;
     .form-group {
         a {
             font-size: 1.2rem;
@@ -191,7 +193,7 @@
         font-size: 1.3rem;
         font-weight: 400;
         color: #797979;
-        margin-bottom: 0.8rem;
+        margin-bottom: 0.8rem;     
     }
 
     .login-text {
